# sudoku

./: .gitignore  0.app.worker.js  0.app.worker.js.map  1.app.worker.js  1.app.worker.js.map  1.bundle.js  124.app.js  124.app.js.map  171.app.js  171.app.js.map  AGENTS.md  Cargo.toml  LICENSE  README.md  TODO.md  app.js  app.js.LICENSE.txt  app.js.map  azure-pipelines.yml  bundle.js  deny.toml  index.html  justfile  manifest.abca09997a9ca0eca66c6f3406ecdfde.json  package-lock.json  package.json  rust-toolchain.toml  service-worker.js  service-worker.js.map  tsconfig.json  webpack.config.js
.cargo/: config  (+1 more)
crate/: Cargo.toml
crate/src/: lib.rs
sudoku-afl/: Cargo.toml  run.sh
sudoku-afl/in/: givens_line.txt
sudoku-afl/src/: main.rs
sudoku-api/: Cargo.toml
sudoku-api/load-testing/: breakpoint.js
sudoku-api/res/http/: api.http
sudoku-api/src/: main.rs
sudoku-rs/: .gitignore  Cargo.toml
sudoku-rs/benches/: sudoku_benchmark.rs
sudoku-rs/bindings/: Action.ts  BaseEnum.ts  Candidates.ts  CellView.ts  CellWorldDimensions.ts  DynamicCandidates.ts  DynamicCell.ts  DynamicGeneratorSettings.ts  DynamicGrid.ts  DynamicGridFormat.ts  DynamicMultiShotGeneratorSettings.ts  DynamicPosition.ts  DynamicPruningOrder.ts  DynamicPruningSettings.ts  DynamicSolutionSettings.ts  DynamicSolveStep.ts  DynamicStrategy.ts  DynamicTryStrategiesReturn.ts  DynamicValue.ts  DynamicWorldGridCellPosition.ts  GeneratorProgress.ts  GeneratorSettings.ts  GeneratorTarget.ts  GoalOptimization.ts  GridFormat.ts  GridFormatEnum.ts  GridIndex.ts  GridMetric.ts  MultiShotGeneratorProgress.ts  Position.ts  PositionedTransportAction.ts  PositionedTransportReason.ts  PruningGroupBehaviour.ts  PruningTarget.ts  Quadrant.ts  Reason.ts  RelativeDir.ts  RelativeGridDir.ts  RelativeTileDir.ts  StrategyEnum.ts  (+18 more)
sudoku-rs/examples/: sat_solver_assigment_to_solution.rs  sat_solver_dump_cnf.rs  sat_solver_dump_grid_assignments.rs
sudoku-rs/fuzz/: Cargo.toml  run.sh
sudoku-rs/fuzz/fuzz_targets/: dynamic_sudoku_parse.rs
sudoku-rs/src/: base.rs  error.rs  grid.rs  history.rs  lib.rs  main.rs  parser.rs  position.rs  rng.rs  samples.rs  settings.rs  sudoku.rs  test_util.rs  transport.rs  unsafe_utils.rs
sudoku-rs/src/cell/: candidates_cell.rs  compact.rs  dynamic.rs  mod.rs  value.rs  view.rs
sudoku-rs/src/cell/compact/: candidates.rs  cell_state.rs  sudoku_base.rs  value.rs
sudoku-rs/src/cell/compact/candidates/: iter.rs  iter_combinations.rs
sudoku-rs/src/cell/dynamic/: mod.rs  parser.rs
sudoku-rs/src/cell/view/: parser.rs
sudoku-rs/src/generator/: backtracking.rs  mod.rs  random.rs  settings.rs
sudoku-rs/src/generator/goal/: mod.rs
sudoku-rs/src/generator/multi_shot/: mod.rs
sudoku-rs/src/grid/: deserialization.rs  dynamic.rs  format.rs  index.rs  mod.rs  parser.rs  serialization.rs  solution_state.rs
sudoku-rs/src/grid/format/: ascii_candidates_grid.rs  binary_candidates_line.rs  binary_fixed_candidates_line.rs  candidates_grid.rs  candidates_grid_compact.rs  givens_grid.rs  givens_line.rs  json.rs  values_grid.rs  values_line.rs  wiki.rs
sudoku-rs/src/grid/format/snapshots/: sudoku__grid__format__candidates_grid__tests__ansi_styled__snapshots__render__base_2_candidates_coordinates.snap  sudoku__grid__format__candidates_grid__tests__ansi_styled__snapshots__render__base_2_sample_0.snap  sudoku__grid__format__candidates_grid__tests__ansi_styled__snapshots__render__base_2_sample_1.snap  sudoku__grid__format__candidates_grid__tests__ansi_styled__snapshots__render__base_2_sample_2.snap  sudoku__grid__format__candidates_grid__tests__ansi_styled__snapshots__render__base_2_solved.snap  sudoku__grid__format__candidates_grid__tests__ansi_styled__snapshots__render__base_3_sample_0.snap  sudoku__grid__format__candidates_grid__tests__ansi_styled__snapshots__render__base_3_sample_1.snap  sudoku__grid__format__candidates_grid__tests__ansi_styled__snapshots__render__base_3_sample_2.snap  sudoku__grid__format__candidates_grid__tests__ansi_styled__snapshots__render__base_3_sample_3.snap  sudoku__grid__format__candidates_grid__tests__ansi_styled__snapshots__render__base_3_sample_4.snap  sudoku__grid__format__candidates_grid__tests__ansi_styled__snapshots__render__base_3_sample_5.snap  sudoku__grid__format__candidates_grid__tests__ansi_styled__snapshots__render__base_3_sample_6.snap  sudoku__grid__format__candidates_grid__tests__ansi_styled__snapshots__render__base_4_sample_0.snap  sudoku__grid__format__candidates_grid__tests__ansi_styled__snapshots__render__base_5_sample_0.snap  (+117 more)
sudoku-rs/src/grid/group/: iter.rs  mod.rs
sudoku-rs/src/grid/index/: coordinate.rs  position.rs
sudoku-rs/src/position/: bounded_block_coordinate.rs  bounded_block_segment.rs  bounded_coordinate.rs  bounded_position.rs  dynamic.rs  group.rs  mod.rs  position_map.rs
sudoku-rs/src/solver/: mod.rs  strategies.rs
sudoku-rs/src/solver/backtracking/: availability_filter.rs  candidates_filter.rs  choice.rs  group_availability.rs  mod.rs
sudoku-rs/src/solver/backtracking_bitset/: group_availability.rs  mod.rs
sudoku-rs/src/solver/constraint/: mod.rs  pcp_utils.rs
sudoku-rs/src/solver/emerentius/: mod.rs
sudoku-rs/src/solver/introspective/: mod.rs
sudoku-rs/src/solver/sat/: cell_variable.rs  mod.rs
sudoku-rs/src/solver/strategic/: deduction.rs  group_candidate_availability.rs  mod.rs  strategies.rs
sudoku-rs/src/sudoku/: dynamic.rs  history.rs  mod.rs  settings.rs  transport.rs
sudoku-rs/src/world/: dynamic.rs  grid_index.rs  mod.rs  overlap_segment_filter.rs  parallel.rs  pruning.rs  tile_index.rs  world_position.rs
sudoku-rs/src/world/indexing/: direction.rs  mod.rs  overlap.rs  overlap_segment.rs  tiling_pattern.rs  world_object_marker.rs  world_region.rs
sudoku-rs/tests/res/: candidates.txt
sudoku-rs/tests/res/parser/: givens_grid.txt
sudoku-rs/tests/res/tdoku/: .gitignore
sudoku-wasm/: Cargo.toml
sudoku-wasm/pkg/: package.json  sudoku_wasm.d.ts
sudoku-wasm/src/: error.rs  lib.rs  typescript.rs
sudoku-wasm/src/wasm_api/: mod.rs  wasm_cell_world.rs  wasm_sudoku.rs
sudoku-wasm/tests/: wasm.rs
(+641 files in other folders)
