[workspace]
members = [
    "sudoku-rs",
    "sudoku-wasm",
]
resolver = "2"

[workspace.package]
authors = ["Mathias Lengler <mathias@lengler.dev>"]
categories = ["games", "wasm", "algorithms"]
description = "Touch optimized sudoku built with Rust/WASM/TypeScript/React."
edition = "2021"
homepage = "https://sudoku.lengler.dev"
keywords = ["sudoku"]
license = "MIT"
publish = false
repository = "https://github.com/MathiasLengler/sudoku"
rust-version = "1.66"
version = "0.2.0"

[workspace.dependencies]
log = { version = "0.4.20", features = ["max_level_debug"] }
serde = { version = "1.0.194" }
anyhow = { version = "1.0.79", features = ["backtrace"] }

[profile.release-with-debug]
inherits = "release"
debug = true

[patch.crates-io]

[patch.crates-io.ts-rs]
git = "https://github.com/MathiasLengler/ts-rs"
#path = "../ts-rs/ts-rs"
