[workspace]
members = ["sudoku-rs", "sudoku-wasm"]
resolver = "2"

[workspace.package]
authors = ["Mathias Lengler <mathias@lengler.dev>"]
categories = ["games", "wasm", "algorithms"]
description = "Touch optimized sudoku built with Rust/WASM/TypeScript/React."
edition = "2024"
homepage = "https://sudoku.lengler.dev"
keywords = ["sudoku"]
license = "MIT"
publish = false
repository = "https://github.com/MathiasLengler/sudoku"
rust-version = "1.92"
version = "0.2.0"

[workspace.dependencies]
log = { version = "0.4.28" }
serde = { version = "1.0.228" }
anyhow = { version = "1.0.100", features = ["backtrace"] }

[profile.release-debug-full]
inherits = "release"
debug = true

# https://doc.rust-lang.org/cargo/guide/build-performance.html#reduce-amount-of-generated-debug-information
[profile.dev]
debug = "line-tables-only"
[profile.dev.package."*"]
debug = false
[profile.debug-full]
inherits = "dev"
debug = true

# https://docs.rs/insta/latest/insta/#optional-faster-runs
[profile.dev.package.insta]
opt-level = 3
[profile.dev.package.similar]
opt-level = 3


[patch.crates-io]

[patch.crates-io.varisat]
git = "https://github.com/MathiasLengler/varisat"
# path = "../varisat/varisat"
