[package]
authors = ["Mathias Lengler <mathias@lengler.dev>"]
name = "sudoku-wasm"
readme = "./README.md"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
# wasm
wasm-bindgen = "0.2.25"
console_error_panic_hook = { version = "0.1.5", optional = true }
wee_alloc = { version = "0.4.2", optional = true }
console_log = { version = "0.1.2", optional = true }

# own
log = "0.4.6"
sudoku = { path = "../../../Rust/sudoku" }

[dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "Element",
  "HtmlElement",
  "Node",
  "Window",
]

[features]
default = ["console"]
console = ["console_error_panic_hook", "console_log"]
