[package]
name = "sudoku-afl"
version = "0.1.0"
authors = ["Mathias Lengler <mathias@lengler.dev>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sudoku = { path = "../sudoku-rs" }
arbitrary = "1.1.0"

[target.'cfg(unix)'.dependencies]
afl = "0.12.4"
