[package]
name = "sudoku-api"
version = "0.1.0"
authors = ["Mathias Lengler <mathias@lengler.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "8e4ddc06f2e319eebd4fc2b106137d846c9c28cf" }

[dependencies.rocket_contrib]
git = "https://github.com/SergioBenitez/Rocket"
rev = "8e4ddc06f2e319eebd4fc2b106137d846c9c28cf"
default-features = false
features = ["json"]
