[package]
name = "sudoku"

authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
# Workspace dependencies
anyhow = { workspace = true }
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
# Required dependencies
serde_repr = "0.1.19"
enum_dispatch = "0.3.13"
getrandom = "0.2.15"
indexmap = "2.7.0"
itertools = "0.13.0"
ndarray = { version = "0.16.1", features = ["serde"] }
num = "0.4.3"
owo-colors = "4.1.0"
papergrid = "0.13.0"
radix_fmt = "1.0.0"
rand = "0.8.5"
rand_xoshiro = "0.6.0"
strip-ansi-escapes = "0.2.0"
once_cell = "1.20.2"
tabled = { version = "0.17.0", features = ["ansi"] }
varisat = "0.2.2"

# Optional dependencies enabled via features
crossterm = { version = "0.28.1", optional = true }
indicatif = { version = "0.17.9", optional = true }
rayon = { version = "1.10.0", optional = true }
ts-rs = { version = "10.1.0", optional = true }
hdrhistogram = { version = "7.5.4", optional = true }
env_logger = { version = "0.11.6", optional = true }
petgraph = { version = "0.6.5", optional = true }

[dev-dependencies]
serde_json = "1.0.134"

[target.'cfg(not(target_family="wasm"))'.dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[features]
default = ["log"]
log = ["env_logger"]
terminal = ["crossterm", "indicatif"]
parallel = ["rayon", "indicatif/rayon"]
wasm = ["getrandom/js", "ts-rs"]
solver_debug_print = ["terminal"]
histogram = ["hdrhistogram"]
graph = ["petgraph"]

[[bench]]
name = "sudoku_benchmark"
harness = false

[[bin]]
name = "cell_world_find_grid_backtrack"
required-features = ["parallel"]
[[bin]]
name = "cell_world_gen_stats"
required-features = ["parallel"]
[[bin]]
name = "cell_world_playground"
required-features = ["parallel"]
[[bin]]
name = "generator"
required-features = ["log", "parallel", "terminal"]
[[bin]]
name = "goal_generator"
required-features = ["log", "parallel", "terminal"]
[[bin]]
name = "generate_histogram"
required-features = ["parallel", "terminal", "histogram"]
[[bin]]
name = "solver_animation"
required-features = ["solver_debug_print"]
[[bin]]
name = "solver_parallel"
required-features = ["parallel"]
[[bin]]
name = "tdoku_benchmark"
required-features = ["terminal"]
[[bin]]
name = "solve_graph"
required-features = ["graph"]
