[package]
name = "sudoku"

authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
# Workspace dependencies
anyhow = { workspace = true }
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
# Required dependencies
serde_repr = "0.1.20"
enum_dispatch = "0.3.13"
getrandom = "0.3.3"
indexmap = "2.11.0"
itertools = "0.14.0"
ndarray = { version = "0.16.1", features = ["serde"] }
num = "0.4.3"
owo-colors = "4.2.2"
papergrid = "0.17.0"
radix_fmt = "1.0.0"
rand = "0.9.2"
rand_xoshiro = "0.7.0"
strip-ansi-escapes = "0.2.1"
once_cell = "1.21.3"
tabled = { version = "0.20.0", features = ["ansi"] }
varisat = "0.2.2"

# Optional dependencies enabled via features
crossterm = { version = "0.29.0", optional = true }
indicatif = { version = "0.18.0", optional = true }
rayon = { version = "1.10.0", optional = true }
ts-rs = { version = "11.0.1", optional = true }
hdrhistogram = { version = "7.5.4", optional = true }
env_logger = { version = "0.11.8", optional = true }
petgraph = { version = "0.8.2", optional = true }
clap = { version = "4.5.46", optional = true, features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.143"
rstest = "0.26.1"

[target.'cfg(not(target_family="wasm"))'.dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[features]
# FIXME: should parallel be a feature?
#  it is now used by Sudoku/DynamicSudoku
#  MultiShotGenerator could be adapted to conditionally use it
default = ["log", "parallel"]
log = ["env_logger"]
terminal = ["crossterm", "indicatif", "clap"]
parallel = ["rayon", "indicatif/rayon"]
wasm = ["getrandom/wasm_js", "ts-rs"]
solver_debug_print = ["terminal"]
histogram = ["hdrhistogram"]
graph = ["petgraph"]

[[bench]]
name = "sudoku_benchmark"
harness = false

[[bin]]
name = "cell_world_find_grid_backtrack"
required-features = ["parallel"]
[[bin]]
name = "cell_world_gen_stats"
required-features = ["parallel"]
[[bin]]
name = "cell_world_playground"
required-features = ["parallel"]
[[bin]]
name = "generator"
required-features = ["log", "parallel", "terminal"]
[[bin]]
name = "goal_generator"
required-features = ["log", "parallel", "terminal"]
[[bin]]
name = "generate_histogram"
required-features = ["parallel", "terminal", "histogram"]
[[bin]]
name = "solver_animation"
required-features = ["solver_debug_print"]
[[bin]]
name = "solver_parallel"
required-features = ["parallel"]
[[bin]]
name = "tdoku_benchmark"
required-features = ["terminal"]
[[bin]]
name = "solve_graph"
required-features = ["graph"]
[[bin]]
name = "grid_metric_analysis"
required-features = ["log", "parallel", "terminal"]
