[package]
name = "sudoku-wasm"

# Wait for issure to be resolved: https://github.com/rustwasm/wasm-pack/issues/1180
authors.workspace = true
categories.workspace = true
description = "Touch optimized sudoku built with Rust/WASM/TypeScript/React."
edition.workspace = true
homepage = "https://sudoku.lengler.dev"
keywords.workspace = true
license = "MIT"
publish.workspace = true
repository = "https://github.com/MathiasLengler/sudoku"
rust-version.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
log = { workspace = true, features = ["max_level_debug", "release_max_level_debug"] }
serde = { workspace = true }
anyhow = { workspace = true }
console_error_panic_hook = { version = "0.1.7", optional = true }
console_log = { version = "1.0.0", optional = true }
js-sys = "0.3.69"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = { version = "0.2.92", features = ["serde-serialize"] }
paste = "1.0.15"

[dependencies.sudoku]
path = "../sudoku-rs"
default-features = false
features = [
    "wasm",
    # TODO: re-enable
#    "parallel"
]

[dev-dependencies]
wasm-bindgen-test = "0.3.42"

[dependencies.web-sys]
version = "0.3.69"
features = [
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "Window",
]

[target.'cfg(target_family="wasm")'.dependencies]
wasm-bindgen-rayon = "1.2.1"

[features]
default = ["console"]
console = ["console_error_panic_hook", "console_log"]
