[package]
name = "sudoku-wasm"

authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
log = { workspace = true, features = [
    "max_level_debug",
    "release_max_level_debug",
] }
serde = { workspace = true }
anyhow = { workspace = true }
console_error_panic_hook = { version = "0.1.7", optional = true }
console_log = { version = "1.0.0", optional = true }
js-sys = "0.3.82"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = { version = "0.2.105", features = ["serde-serialize"] }
paste = "1.0.15"
postcard = { version = "1.1.3", features = ["use-std"] }

[dependencies.sudoku]
path = "../sudoku-rs"
default-features = false
features = ["wasm", "parallel"]

[dev-dependencies]
wasm-bindgen-test = "0.3.55"

[dependencies.web-sys]
version = "0.3.82"
features = ["Document", "Element", "HtmlElement", "Node", "Window"]

[target.'cfg(target_family="wasm")'.dependencies]
wasm-bindgen-rayon = "1.3.0"

[features]
default = ["console"]
console = ["console_error_panic_hook", "console_log"]

# Enable DWARF debug info in wasm-pack dev builds.
# Enables Rust sourcemaps in Chrome DevTools, but slows down dev compile times by ~6 seconds.
# https://github.com/drager/wasm-pack/issues/1351#issuecomment-2100231587
[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
dwarf-debug-info = false
